--- a/src/gui/InsertCSS.css
+++ b/src/gui/InsertCSS.css
@@ -3,7 +3,11 @@
     -fx-margin-bottom: 10px;
     -fx-padding: 10px;
     -fx-border-radius: 5px;
-    -fx-border: 2px solid #dddddd;
+    
+    -fx-border-width: 2px;
+	-fx-border-style: solid;
+	-fx-border-color:  #dddddd;
+    
     -fx-background: #ffffff;
     -fx-outline: none;
     -fx-transition: border-color 0.5s;
@@ -12,7 +16,10 @@
     -fx-background: #009578;
 }
 #vbox{
-    -fx-border:1px black;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+	-fx-border-style: solid;
+    
 }
 .lbl{
     -fx-color: #333333; 
@@ -31,7 +38,8 @@
 }
 
 #insert_btn:hover {
-    -fx-box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+    -fx-box-shadow: 0 0 15px;
+     -fx-box-shadow-color: rgba(0, 0, 0, 0.15); 
     -fx-background: #008067;
 }
 
