--- a/src/gui/IndexScreen.fxml
+++ b/src/gui/IndexScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -7,27 +8,37 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@indexScreenCSS.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.IndexController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="624.0" stylesheets="@indexScreenCSS.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.IndexController">
    <children>
-      <GridPane layoutX="111.0" layoutY="155.0" prefHeight="90.0" prefWidth="379.0">
+      <GridPane layoutX="94.0" layoutY="144.0" prefHeight="105.0" prefWidth="413.0">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="98.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="155.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="122.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="159.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="126.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="36.0" valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insertOrder" styleClass="index_btn" text="Insert" GridPane.rowIndex="1" />
-            <Button fx:id="update_btn" mnemonicParsing="false" onAction="#updateOrder" styleClass="index_btn" text="Update" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="search_btn" mnemonicParsing="false" onAction="#searchOrder" styleClass="index_btn" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insertOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Insert" GridPane.rowIndex="1">
+               <graphic>
+                  <FontAwesomeIconView glyphName="PLUS" />
+               </graphic></Button>
+            <Button fx:id="update_btn" mnemonicParsing="false" onAction="#updateOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Update" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <graphic>
+                  <FontAwesomeIconView glyphName="EXCHANGE" />
+               </graphic></Button>
+            <Button fx:id="search_btn" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <graphic>
+                  <FontAwesomeIconView glyphName="EYE" />
+               </graphic>
+            </Button>
          </children>
       </GridPane>
-      <Label fx:id="title_lbl" layoutX="155.0" layoutY="69.0" text="BiteMe Prototype" />
-      <Button fx:id="Exit_btn" layoutX="279.0" layoutY="297.0" mnemonicParsing="false" onAction="#exit_program" styleClass="index_btn" text="Exit" />
+      <Label fx:id="title_lbl" layoutX="163.0" layoutY="71.0" text="BiteMe Prototype" />
+      <Button fx:id="Exit_btn" layoutX="274.0" layoutY="277.0" mnemonicParsing="false" onAction="#exit_program" styleClass="btn" text="Exit" />
       <Label fx:id="status_label" layoutX="38.0" layoutY="24.0" />
    </children>
 </Pane>
