--- a/src/gui/SearchScreen.fxml
+++ b/src/gui/SearchScreen.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.SearchOrderController">
+<Pane fx:id="search_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@SearchScreenCSS.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.SearchOrderController">
    <children>
       <Label fx:id="order_number_label" layoutX="101.0" layoutY="48.0" text="Order Number" />
       <TextField fx:id="order_number_input" layoutX="212.0" layoutY="44.0" />
@@ -14,7 +16,12 @@
       <TextField fx:id="order_type_result" editable="false" layoutX="212.0" layoutY="224.0" />
       <TextField fx:id="order_address_result" editable="false" layoutX="212.0" layoutY="263.0" />
       <TextField fx:id="restuarant_result" editable="false" layoutX="212.0" layoutY="114.0" />
-      <Button fx:id="serach_order_btn" layoutX="421.0" layoutY="44.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="25.0" prefWidth="86.0" text="Search Order" />
-      <Button fx:id="back_btn" layoutX="261.0" layoutY="347.0" mnemonicParsing="false" onAction="#back_to_index" text="Back" />
+      <Button fx:id="serach_order_btn" layoutX="421.0" layoutY="44.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Search Order" textFill="#2c2c2c" />
+      <Button fx:id="back_btn" layoutX="214.0" layoutY="347.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Back" textFill="#1b1919" />
+      <ImageView fitHeight="169.0" fitWidth="171.0" layoutX="408.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@search_img.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
