--- a/bin/gui/IndexScreen.fxml
+++ b/bin/gui/IndexScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -7,13 +8,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="624.0" stylesheets="@indexScreenCSS.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.IndexController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.IndexController">
    <children>
-      <GridPane layoutX="94.0" layoutY="144.0" prefHeight="105.0" prefWidth="413.0">
+      <GridPane layoutX="376.0" layoutY="270.0" prefHeight="219.0" prefWidth="525.0">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="122.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="159.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="126.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="132.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="146.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="134.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
@@ -21,16 +22,20 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insertOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Insert" GridPane.rowIndex="1">
+            <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insertOrder" prefHeight="30.0" prefWidth="120.0" styleClass="btn" text="Insert" GridPane.rowIndex="1">
                </Button>
-            <Button fx:id="update_btn" mnemonicParsing="false" onAction="#updateOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Update" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="update_btn" mnemonicParsing="false" onAction="#updateOrder" prefHeight="30.0" prefWidth="120.0" styleClass="btn" text="Update" GridPane.columnIndex="1" GridPane.rowIndex="1">
                </Button>
-            <Button fx:id="search_btn" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="115.0" styleClass="btn" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="search_btn" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="120.0" styleClass="btn" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="1">
             </Button>
+            <Button fx:id="Exit_btn" mnemonicParsing="false" onAction="#exit_program" prefHeight="30.0" prefWidth="120.0" styleClass="btn" text="Exit" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Label fx:id="title_lbl" layoutX="163.0" layoutY="71.0" text="BiteMe Prototype" />
-      <Button fx:id="Exit_btn" layoutX="274.0" layoutY="277.0" mnemonicParsing="false" onAction="#exit_program" styleClass="btn" text="Exit" />
+      <Label fx:id="title_lbl" layoutX="493.0" layoutY="172.0" text="BiteMe Prototype" />
       <Label fx:id="status_label" layoutX="38.0" layoutY="24.0" />
    </children>
+   <stylesheets>
+      <URL value="@GeneralStyleSheet.css" />
+      <URL value="@indexScreenCSS.css" />
+   </stylesheets>
 </Pane>
