--- a/bin/gui/InsertCSS.css
+++ b/bin/gui/InsertCSS.css
@@ -1,26 +1,14 @@
 
-#insert_pane{
-    -fx-background:#fff;
-}
 
-.btn{
-    -fx-background-color: #405cf5;
-    -fx-border-radius: 6px;
-    -fx-border-width: 0;
-    -fx-box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
-    -fx-box-sizing: border-box;
-    -fx-color: #fff;
-    -fx-cursor: pointer;
-    -fx-font-size: 100%;
-    -fx-height: 44px;
-    -fx-line-height: 1.15;
-    -fx-margin: 12px 0 0;
-    -fx-outline: none;
-    -fx-overflow: hidden;
-    -fx-padding: 0 25px;
-    -fx-text-align: center;
-  }
-  .btn:hover {
-      -fx-box-shadow:  rgba(0, 0, 0, 0.15);
-      -fx-background-color: #7294c2;
-  }
+#cmb {
+	-fx-background-color: white;
+	-fx-border-size:1px;
+	-fx-border-color:grey;
+	-fx-box-shadow: 0 2px 0 white;
+	-fx-border-radius: 2px;
+	}
+#title_lbl{
+	-fx-color: #333333;
+    -fx-font-weight: bold;
+    -fx-font-size: 25px;
+}
