--- a/bin/gui/SearchScreen.fxml
+++ b/bin/gui/SearchScreen.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@SearchScreenCSS.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.SearchOrderController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.SearchOrderController">
    <children>
-      <Label fx:id="order_number_label" layoutX="101.0" layoutY="48.0" text="Order Number" />
-      <TextField fx:id="order_number_input" layoutX="212.0" layoutY="44.0" />
-      <TextField fx:id="order_time_result" editable="false" layoutX="212.0" layoutY="152.0" />
-      <TextField fx:id="phone_result" editable="false" layoutX="212.0" layoutY="188.0" />
-      <TextField fx:id="order_type_result" editable="false" layoutX="212.0" layoutY="224.0" />
-      <TextField fx:id="order_address_result" editable="false" layoutX="212.0" layoutY="263.0" />
-      <TextField fx:id="restuarant_result" editable="false" layoutX="212.0" layoutY="114.0" />
-      <Button fx:id="serach_order_btn" layoutX="421.0" layoutY="44.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Search Order" textFill="#2c2c2c" />
-      <Button fx:id="back_btn" layoutX="214.0" layoutY="347.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Back" textFill="#1b1919" />
+      <Label fx:id="order_number_label" layoutX="471.0" layoutY="229.0" styleClass="lbl" text="Order Number" />
+      <TextField fx:id="order_number_input" layoutX="578.0" layoutY="225.0" promptText="Ex. 12" />
+      <Button fx:id="serach_order_btn" layoutX="749.0" layoutY="223.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Search Order" textFill="#2c2c2c" />
+      <Button fx:id="back_btn" layoutX="584.0" layoutY="506.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Back" textFill="#1b1919" />
+      <Label layoutX="619.0" layoutY="280.0" prefHeight="17.0" prefWidth="78.0" styleClass="lbl" text="Order details:" />
+      <Label id="res_lbl" fx:id="search_res" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="494.0" layoutY="312.0" prefHeight="177.0" prefWidth="329.0" styleClass="lbl" />
+      <Label id="search_title" layoutX="553.0" layoutY="129.0" text="Search for order:" />
    </children>
+   <stylesheets>
+      <URL value="@GeneralStyleSheet.css" />
+      <URL value="@SearchScreenCSS.css" />
+   </stylesheets>
 </Pane>
