--- a/src/gui/UpdateScreen.fxml
+++ b/src/gui/UpdateScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -9,29 +10,33 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane id="changescreen" fx:id="update_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="906.0" prefWidth="1114.0" stylesheets="@updateScreenCss.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.UpdateOrderController">
+<Pane id="changescreen" fx:id="update_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.UpdateOrderController">
    <children>
-      <TableView fx:id="OrderTable" layoutY="95.0" prefHeight="511.0" prefWidth="1114.0">
+      <TableView fx:id="OrderTable" layoutY="95.0" prefHeight="429.0" prefWidth="1280.0">
         <columns>
           <TableColumn fx:id="order_col" prefWidth="55.0" text="Order" />
-          <TableColumn fx:id="resturant_col" prefWidth="134.0" text="Resturant" />
-            <TableColumn fx:id="order_type_col" prefWidth="202.0" text="Order Type" />
-            <TableColumn fx:id="phone_col" prefWidth="225.0" text="Phone-Number" />
-            <TableColumn fx:id="time_col" prefWidth="226.0" text="Time of Order" />
-            <TableColumn fx:id="address_col" prefWidth="271.0" text="Order Address" />
+          <TableColumn fx:id="resturant_col" prefWidth="190.0" text="Resturant" />
+            <TableColumn fx:id="order_type_col" prefWidth="192.0" text="Order Type" />
+            <TableColumn fx:id="phone_col" prefWidth="268.0" text="Phone-Number" />
+            <TableColumn fx:id="time_col" prefWidth="240.0" text="Time of Order" />
+            <TableColumn fx:id="address_col" prefWidth="334.0" text="Order Address" />
         </columns>
       </TableView>
-      <Label id="title" layoutX="433.0" layoutY="25.0" text="Change Order">
+      <Label id="title" layoutX="537.0" layoutY="26.0" text="Change Order">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <Button fx:id="back_btn" layoutX="537.0" layoutY="847.0" mnemonicParsing="false" onAction="#back_to_index" text="Back" />
-      <Label layoutX="356.0" layoutY="689.0" text="Order Address" />
-      <Label layoutX="356.0" layoutY="738.0" text="Order Type" />
-      <ComboBox fx:id="updated_type" layoutX="489.0" layoutY="734.0" prefWidth="150.0" promptText="Take-Away" />
-      <TextField fx:id="updated_address" layoutX="490.0" layoutY="685.0" promptText="Ex. Hertzel 16" />
-      <Button fx:id="update_btn" layoutX="513.0" layoutY="798.0" mnemonicParsing="false" onAction="#updateOrder" text="Update Order" />
-      <Label fx:id="selected_order" layoutX="543.0" layoutY="632.0" />
+      <Button fx:id="back_btn" layoutX="594.0" layoutY="743.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="25.0" prefWidth="85.0" styleClass="btn" text="Back" />
+      <Label layoutX="422.0" layoutY="611.0" styleClass="lbl" text="Order Address" />
+      <Label layoutX="431.0" layoutY="662.0" styleClass="lbl" text="Order Type" />
+      <ComboBox id="cmbOrder" fx:id="updated_type" layoutX="565.0" layoutY="658.0" prefWidth="150.0" promptText="Take-Away" />
+      <TextField fx:id="updated_address" layoutX="565.0" layoutY="607.0" promptText="Ex. Hertzel 16" />
+      <Button fx:id="update_btn" layoutX="741.0" layoutY="632.0" mnemonicParsing="false" onAction="#updateOrder" prefHeight="25.0" prefWidth="125.0" styleClass="btn" text="Update Order" />
+      <Label fx:id="selected_order" layoutX="411.0" layoutY="546.0" prefHeight="17.0" prefWidth="456.0" />
    </children>
+   <stylesheets>
+      <URL value="@GeneralStyleSheet.css" />
+      <URL value="@updateScreenCss.css" />
+   </stylesheets>
 </Pane>
