--- a/bin/gui/GeneralStyleSheet.css
+++ b/bin/gui/GeneralStyleSheet.css
@@ -28,3 +28,9 @@
 	-fx-font-size:12px;
 	-fx-font-family:'sans-sarif'
 }
+#title_lbl{
+    -fx-color: #333333;
+    -fx-font-weight: bold;
+    -fx-font-size: 35px;
+    -fx-font-family:'sans-sarif'
+}
